XMLExper/m12/m12_339_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘const tinyxml2::XMLElement* tinyxml2::XMLNode::PreviousSiblingElement(const char*) const’:
tinyxml2.cpp:1077:61: error: cannot dynamic_cast ‘element’ (of type ‘const class tinyxml2::XMLElement*’) to type ‘class tinyxml2::XMLNode*’ (conversion casts away constness)
 1077 |         if ( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(element) ) {
      |                                                             ^
diff: tinyxml2.S: No such file or directory
